--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ modLoader="javafml" #mandatory
 loaderVersion="[41,)" #mandatory This is typically bumped every Minecraft version by Forge. See our download page for lists of versions.
 # The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
 # Review your options at https://choosealicense.com/. All rights reserved is the default copyright stance, and is thus the default here.
-license="MIT license"
+license="MIT License"
 # A URL to refer people to when problems occur with this mod
 #issueTrackerURL="https://change.me.to.your.issue.tracker.example.invalid/" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
@@ -19,17 +19,17 @@ modId="oppamod" #mandatory
 # The version number of the mod - there's a few well known ${} variables useable here or just hardcode it
 # ${file.jarVersion} will substitute the value of the Implementation-Version as read from the mod's JAR file metadata
 # see the associated build.gradle script for how to populate this completely automatically during a build
-version="$0.0.1-1.19" #mandatory
+version="1.19" #mandatory
  # A display name for the mod
-displayName="Oppa Mod" #mandatory
+displayName="OppaTerrariaMod" #mandatory
 # A URL to query for updates for this mod. See the JSON update specification https://mcforge.readthedocs.io/en/latest/gettingstarted/autoupdate/
 #updateJSONURL="https://change.me.example.invalid/updates.json" #optional
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="oppamod.png" #optional
+logoFile="examplemod.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this example mod goes to Java" #optional
+credits="Thanks for this Oppamod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="Oppakolba" #optional
 # Display Test controls the display for your mod in the server connection screen
@@ -42,9 +42,12 @@ authors="Oppakolba" #optional
 
 # The description text for the mod (multi line!) (#mandatory)
 description='''
-This is my first mod
+Hi this is my first mod "Terraria in Minecraft" good games and learn lorem ipsum
 
-pipipupu check
+To contact:
+Tg: https://t.me/jarmenya52
+
+
 '''
 # A dependency - use the . to indicate dependency for a specific modid. Dependencies are optional.
 [[dependencies.oppamod]] #optional
