--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,9 +27,9 @@ displayName="Canes" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="  " #optional
+logoFile="Oblozkha.png" #optional
 # A text field displayed in the mod UI
-credits="Thanks for this Oppamod goes to Java" #optional
+credits="Thanks for this Canes Mod goes to Java" #optional
 # A text field displayed in the mod UI
 authors="Oppakolba" #optional
 # Display Test controls the display for your mod in the server connection screen
@@ -44,8 +44,7 @@ authors="Oppakolba" #optional
 description='''
 Hi this is my first mod "Canes" good games and learn lorem ipsum
 
-To contact:
-Tg: https://t.me/jarmenya52
+To contact https://t.me/jarmenya52
 
 
 '''
